<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeartMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo_image">这是跳转logo</string>
    <string name="title_activity_login">登录</string>
    <string name="imgButtonDescription">图片按钮描述</string>
    <string name="mainLable">本地歌曲</string>
    <string name="playStyle">播放模式</string>
    <string name="single">单曲循环</string>
    <string name="listCircle">列表循环</string>
    <string name="random">随机播放</string>
    <string name="songList">歌曲列表</string>
    <string name="music">音乐</string>
    <string-array name="welcome_tips">
        <item>我是小灵机器人，很高兴为您服务</item>
    </string-array>

</resources>
